fixed menu item wrapping issue

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -230,7 +230,7 @@ pre {
 }
 
 .menu {
-  width: 100%;
+  width: 100vw;
 	display: flex;
 	flex-direction: column;
 	align-items: stretch;
@@ -246,6 +246,9 @@ pre {
 
 .menu-items {
   margin-bottom: 40vh;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
 }
 
 @-webkit-keyframes fadeMenu {
